WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272262
Fix -Wformat warnings in CtapAuthenticator.cpp
https://bugs.webkit.org/show_bug.cgi?id=272262
Summary
Fix -Wformat warnings in CtapAuthenticator.cpp
David Kilzer (:ddkilzer)
Reported
2024-04-05 18:12:47 PDT
Fix -Wformat warnings in Source/WebKit/UIProcess/WebAuthentication/fido/CtapAuthenticator.cpp.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-05 18:13:00 PDT
<
rdar://problem/126000836
>
David Kilzer (:ddkilzer)
Comment 2
2024-04-05 18:15:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26925
David Kilzer (:ddkilzer)
Comment 3
2024-04-05 18:15:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26925
EWS
Comment 4
2024-04-05 20:19:11 PDT
Committed
277149@main
(e936e6991f61): <
https://commits.webkit.org/277149@main
> Reviewed commits have been landed. Closing PR #26925 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug