Fix -Wformat warnings in CtapAuthenticator.cpp https://bugs.webkit.org/show_bug.cgi?id=272262 <rdar://126000836>

Reviewed by Ryosuke Niwa.

* Source/WebKit/UIProcess/WebAuthentication/fido/CtapAuthenticator.cpp:
(WebKit::CtapAuthenticator::continueMakeCredentialAfterResponseReceived):
(WebKit::CtapAuthenticator::continueGetAssertionAfterResponseReceived):
(WebKit::CtapAuthenticator::continueGetNextAssertionAfterResponseReceived):
(WebKit::CtapAuthenticator::tryRestartPin):
- Add enumToUnderlyingType() when logging to fix warnings.

Canonical link: https://commits.webkit.org/277149@main